# ECHO-Next

./: .envrc  .gitignore  .npmrc  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
docs/: ECHO_NEXT_LIBRARY_CORE.md  ECHO_NEXT_NATIVE_WORKERS.md  ECHO_NEXT_ROADMAP.md  ECHO_NEXT_RULES.md
native/audio-engine/: ChannelBalanceProcessor.cpp  ChannelBalanceProcessor.h  EqMessageProtocol.cpp  EqMessageProtocol.h
native/audio-host/: CMakeLists.txt
native/audio-host/src/: main.cpp
scripts/: build-audio-host.mjs  ensure-native-abi.mjs  smoke-audio-host.mjs  sync-audio-host.mjs
src/main/app/: appSettings.test.ts  appSettings.ts  autoUpdater.ts
src/main/audio/: AudioCore.test.ts  AudioSession.ts  DecoderPipeline.ts  DeviceService.ts  EqBridge.test.ts  EqBridge.ts  NativeOutputBridge.ts  PlaybackClock.ts  README.md  audioTypes.ts
src/main/database/: createDatabase.ts  migrations.ts  schema.ts
src/main/ipc/: audioIpc.ts  libraryIpc.test.ts  libraryIpc.ts  playbackIpc.ts  registerIpc.ts
src/preload/: apiTypes.ts  index.ts
src/renderer/: main.tsx
src/renderer/app/: AppLayout.tsx  routes.tsx
src/renderer/i18n/: locales.ts
src/renderer/pages/: AlbumsPage.test.tsx  AlbumsPage.tsx  ArtistsPage.test.tsx  ArtistsPage.tsx  HistoryPage.tsx  QueuePage.tsx  SettingsPage.tsx  SongsPage.tsx
src/renderer/stores/: PlaybackQueueProvider.test.tsx  PlaybackQueueProvider.tsx
src/renderer/styles/: app.css  artist-detail.css  eq.css  queue.css  songs.css  theme.css
src/shared/constants/: ipcChannels.ts
src/shared/types/: appSettings.ts  audio.ts  library.ts  (+1 more)
(+14 files in other folders)
